--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Homepage</title>
+    <title>Dynamic Homepage with Buttons</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
             background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
+            padding: 20px;
             text-align: center;
         }
         .content {
             margin: 20px auto;
-            max-width: 800px;
+            max-width: 600px;
             background: #fff;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-        .content h2 {
-            margin-top: 0;
+        .hidden {
+            display: none;
+        }
+        button {
+            margin: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -36,35 +36,39 @@
 </header>
 
 <div class="content">
-    <h2>Current Time</h2>
-    <p id="time">Loading...</p>
+    <h2>Changeable Text</h2>
+    <p id="changeText">Click the button below to change this text.</p>
+    <button onclick="changeText()">Change Text</button>
 
-    <h2>Random Quote</h2>
-    <p id="quote">Loading...</p>
+    <h2>Show/Hide Content</h2>
+    <p id="hiddenContent" class="hidden">This is some hidden content. Click the button below to toggle its visibility.</p>
+    <button onclick="toggleContent()">Show/Hide Content</button>
+
+    <h2>Alert Message</h2>
+    <button onclick="showAlert()">Show Alert</button>
 </div>
 
 <script>
-    // Function to display the current time
-    function updateTime() {
-        const now = new Date();
-        document.getElementById('time').textContent = now.toLocaleTimeString();
+    // Function to change the text of a paragraph
+    function changeText() {
+        const textElement = document.getElementById('changeText');
+        textElement.textContent = "You've successfully changed the text!";
     }
-    setInterval(updateTime, 1000); // Update every second
-    updateTime(); // Initial call to display time immediately
 
-    // Function to display a random quote
-    const quotes = [
-        "The best way to predict the future is to invent it.",
-        "Life is 10% what happens to us and 90% how we react to it.",
-        "The only limit to our realization of tomorrow is our doubts of today.",
-        "Do not wait to strike till the iron is hot; but make it hot by striking.",
-        "Whether you think you can or you think you can't, you're right."
-    ];
-    function displayRandomQuote() {
-        const randomIndex = Math.floor(Math.random() * quotes.length);
-        document.getElementById('quote').textContent = quotes[randomIndex];
+    // Function to toggle the visibility of a paragraph
+    function toggleContent() {
+        const content = document.getElementById('hiddenContent');
+        if (content.classList.contains('hidden')) {
+            content.classList.remove('hidden');
+        } else {
+            content.classList.add('hidden');
+        }
     }
-    displayRandomQuote();
+
+    // Function to display an alert message
+    function showAlert() {
+        alert("This is an alert message!");
+    }
 </script>
 
 </body>
