--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
 <header>
-    <h1>Welcome to My Dynamic Homepage</h1>
+    <h1>Hohyun Henry Lee</h1>
 </header>
 
 <div class="content">
