--- a/index.html
+++ b/index.html
@@ -3,73 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Homepage with Buttons</title>
+    <title>Homepage with Menu Bar</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            padding: 20px;
+            margin: 0;
+            padding: 0;
+        }
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+        }
+        .navbar a {
+            float: left;
+            display: block;
+            color: white;
             text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
         }
         .content {
-            margin: 20px auto;
-            max-width: 600px;
-            background: #fff;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .hidden {
-            display: none;
-        }
-        button {
-            margin: 10px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
         }
     </style>
 </head>
 <body>
 
-<header>
-    <h1>Hohyun Henry Lee</h1>
-</header>
-
-<div class="content">
-    <h2>Changeable Text</h2>
-    <p id="changeText">Click the button below to change this text.</p>
-    <button onclick="changeText()">Change Text</button>
-
-    <h2>Show/Hide Content</h2>
-    <p id="hiddenContent" class="hidden">This is some hidden content. Click the button below to toggle its visibility.</p>
-    <button onclick="toggleContent()">Show/Hide Content</button>
-
-    <h2>Alert Message</h2>
-    <button onclick="showAlert()">Show Alert</button>
+<!-- Navigation Bar -->
+<div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
 </div>
 
-<script>
-    // Function to change the text of a paragraph
-    function changeText() {
-        const textElement = document.getElementById('changeText');
-        textElement.textContent = "You've successfully changed the text!";
-    }
-
-    // Function to toggle the visibility of a paragraph
-    function toggleContent() {
-        const content = document.getElementById('hiddenContent');
-        if (content.classList.contains('hidden')) {
-            content.classList.remove('hidden');
-        } else {
-            content.classList.add('hidden');
-        }
-    }
-
-    // Function to display an alert message
-    function showAlert() {
-        alert("This is an alert message!");
-    }
-</script>
+<!-- Content Section -->
+<div class="content">
+    <h1>Welcome to My Homepage</h1>
+    <p>This is the homepage content. Use the menu above to navigate to different sections of the site.</p>
+</div>
 
 </body>
 </html>
