added separate nav bar

--- a/about.html
+++ b/about.html
@@ -7,13 +7,15 @@
     <title>About Me</title>
 </head>
 <body>
-    <!-- Navigation Bar -->
-<div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
-</div>
+    
+    <div id="navbar"></div>
+    <script>
+        fetch("navbar.html")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("navbar").innerHTML = data;
+            });
+    </script>
 
     <h1>About Me</h1>
     <p>This is the about page.</p>
