--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,14 @@
     <title>Contact Me</title>
 </head>
 <body>
-    <!-- Navigation Bar -->
-<div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
-</div>
+    <div id="navbar"></div>
+    <script>
+        fetch("navbar.html")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("navbar").innerHTML = data;
+            });
+    </script>
 
     <h1>Contact Me</h1>
     <p>This is the contact page.</p>
