--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- Content Section -->
 <div class="content">
-    <h1>Welcome to My Homepage</h1>
+    <h1>In progress......</h1>
     <p>This is the homepage content. Use the menu above to navigate to different sections of the site.</p>
 </div>
 
