added separate nav bar

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     </script>
 
     <h1>About Me</h1>
-    <p>This is the about page.</p>
+    <p>What about me?</p>
     <p><a href="index.html">Go back to Home</a></p>
 </body>
 </html>
