--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
             });
     </script>
 
-    <h1>My Projects</h1>
-    <p>This is the projects page.</p>
+    <h1>Download my CV here</h1>
+    <p>Download malware</p>
     <p><a href="index.html">Go back to Home</a></p>
 </body>
 </html>
