--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     </script>
 
     <h1>Contact Me</h1>
-    <p>This is the contact page.</p>
+    <p>hlee649@gatech.edu</p>
     <p><a href="index.html">Go back to Home</a></p>
 </body>
 </html>
