--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <!-- Content Section -->
 <div class="content">
-    <h1>In progress......</h1>
-    <p>This is the homepage content. Use the menu above to navigate to different sections of the site.</p>
+    <h1>In progre-css......</h1>
+    <p>Halp!</p>
 </div>
 
 </body>
