added separate nav bar

--- a/navbar.html
+++ b/navbar.html
@@ -1,11 +1,10 @@
 <div class="navbar">
-    <a href="index.html" class="logo">
-        <img src="logo.png" alt="Logo">
+    <a href="index.html" class="brand-name">Hohyun Henry Lee, Ph.D</a>
     </a>
     <div class="menu">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
+        <a href="projects.html">CV</a>
         <a href="contact.html">Contact</a>
     </div>
 </div>
