--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage with Menu Bar</title>
+    <title>Hohyun Henry Lee</title>
+    
 </head>
 
 <body>
