--- a/projects.html
+++ b/projects.html
@@ -45,16 +45,10 @@
             <ul id="publication-list"></ul>
         </section>
 
-        <section id="conferences">
-            <h2>Conferences</h2>
+        <section id="patents">
+            <h2>Patents</h2>
             <hr>
-            <ul id="conference-list"></ul>
-        </section>
-
-        <section id="other-conferences">
-            <h2>Other Conference Presentations</h2>
-            <hr>
-            <ul id="other-conference-list"></ul>
+            <ul id="patent-list"></ul>
         </section>
 
         <section id="awards">
@@ -62,12 +56,37 @@
             <hr>
             <ul id="award-list"></ul>
         </section>
+        
+
+        <section id="conference-proceedings">
+            <h2>Conference Proceedings</h2>
+            <hr>
+            <ul id="conference-proceedings-list"></ul>
+        </section>
+
+        <section id="conferences">
+            <h2>Conference Talks</h2>
+            <hr>
+            <ul id="conference-list"></ul>
+        </section>
+
+        <section id="other-conferences">
+            <h2>Other Conference Talks</h2>
+            <hr>
+            <ul id="other-conference-list"></ul>
+        </section>
+
+
 
         <section id="talks">
             <h2>Invited Talks</h2>
             <hr>
             <ul id="talk-list"></ul>
         </section>
+
+
+        
+
     </div>
 
     <script src="cv.js"></script>
