added separate nav bar

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,48 @@
 
     <!-- CV Content -->
     <div class="cv-container">
-        <h1>Curriculum Vitae</h1>
+        <h1>Hohyun Lee</h1>
+
+        <section id="education">
+            <h2>Education</h2>
+            <hr>
+            <div class="education-container">
+                <div class="education-item">
+                    <div class="education-year">Jan. 2021 - Dec. 2024</div>
+                    <div class="education-divider"></div>
+                    <div class="education-content">
+                        <ul>
+                            <li><strong>Ph.D. in Mechanical Engineering</strong></li>
+                            <li><i>Georgia Institute of Technology, Atlanta, GA, USA</i></li>
+                            <li>Dissertation: Microbubble dynamics monitoring and control for diagnosis and treatment of brain cancer</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="education-item">
+                    <div class="education-year">Aug. 2019 - Dec. 2021</div>
+                    <div class="education-divider"></div>
+                    <div class="education-content">
+                        <ul>
+                            <li><strong>M.S. in Mechanical Engineering</strong>
+                            <li><i>Georgia Institute of Technology, Atlanta, GA, USA</i></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="education-item">
+                    <div class="education-year">Aug. 2013 - May. 2019</div>
+                    <div class="education-divider"></div>
+                    <div class="education-content">
+                        <ul>
+                            <li><strong>B.S. in Mechanical Engineering</strong>
+                            <li><i>Georgia Institute of Technology, Atlanta, GA, USA</i></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        
+
 
         <section id="publications">
             <h2>Journals</h2>
