--- a/projects.html
+++ b/projects.html
@@ -35,9 +35,13 @@
         });
     </script>
 
+
+
     <!-- CV Content -->
     <div class="cv-container">
         <h1>Hohyun Lee</h1>
+
+        <button id="download-pdf">Download PDF</button>
 
         <section id="education">
             <h2>Education</h2>
@@ -131,6 +135,9 @@
     </div>
 
     <script src="cv.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script src="cv-download.js"></script>
+
 
 </body>
 </html>
