added separate nav bar

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
 
 
             <div class="cv-header">
-                <button id="download-pdf" class="download-btn">📄 Download PDF</button>
+                <button id="download-pdf" class="download-btn">📄 CV PDF</button>
             </div>
             <div id="cv-content">
             <h1>Hohyun Lee</h1>
