added separate nav bar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="images/profile.jpg" alt="Hohyun Henry Lee" id="profile-pic">
 
             <!-- Name & Bio -->
-            <h1>Hohyun (Henry) Lee</h1>
+            <h1>Hohyun (Henry) Lee, Ph.D.</h1>
             <p>Ph.D. in Mechanical Engineering | Therapeutic Ultrasound, Microbubbles, and Machine Learning</p>
 
             <!-- Contact Links with Icons -->
