--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-    <a href="index.html" class="brand-name">Hohyun Lee, Ph.D</a>
+    <a href="index.html" class="brand-name">Hohyun Lee</a>
     <div class="menu">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
