--- a/projects.html
+++ b/projects.html
@@ -42,10 +42,13 @@
 
 
             <div class="cv-header">
+                <div class="cv-title">
+                    <h1>Hohyun (Henry) Lee, Ph.D.<span class="muted">| hlee649@gatech.edu</span></h1>
+                </div>
                 <button id="download-pdf" class="download-btn">📄 CV PDF</button>
             </div>
             <div id="cv-content">
-            <h1>Hohyun Lee</h1>
+            <div id="cv-content">
         
         
 
@@ -95,7 +98,7 @@
 
 
         <section id="publications">
-            <h2>Journals</h2>
+            <h2>Journal Publications</h2>
             <hr>
             <ul id="publication-list"></ul>
         </section>
