--- a/navbar.html
+++ b/navbar.html
@@ -4,8 +4,8 @@
     <a href="index.html" class="brand-name">Hohyun Lee</a>
     <div class="menu">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <!--<a href="about.html">About</a>-->
         <a href="projects.html">CV</a>
-        <a href="contact.html">Contact</a>
+        <!--<a href="contact.html">Contact</a>-->
     </div>
 </div>
